[package]
name = "bf_configparser"
version = "1.1.0"
authors = ["QEDK <qedk.en@gmail.com>"]
edition = "2021"
description = "A simple library for parsing and writing configuration files based on INI like file formats used in Zoo Tycoon (2001)."
homepage = "https://github.com/openztcc/bf-configparser"
repository = "https://github.com/openztcc/bf-configparser"
documentation = ""
readme = "README.md"
license = "MIT OR LGPL-3.0-or-later"
keywords = ["config", "ini", "settings", "configuration", "parser"]
categories = ["config", "encoding", "parser-implementations"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
indexmap = { version = "2.1.0", optional = true }
tokio = { version = "1.35.1", optional = true, features = ["fs"] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["fs", "macros", "rt-multi-thread"] }

[features]
async-std = ["tokio"]
